--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,7 +17,8 @@ http {
 
     map $http_origin $cors_origin {
         # AppFlowy Web origin
-        "~^http://localhost:3000$" $http_origin;
+        #"~^http://localhost:3000$" $http_origin;
+	"~^https://app-flowy-web-two.vercel.app$" $http_origin;
         default "null";
     }
 
@@ -43,9 +44,11 @@ http {
         set $appflowy_cloud_backend "http://appflowy_cloud:8000";
         set $gotrue_backend "http://gotrue:9999";
         set $admin_frontend_backend "http://admin_frontend:3000";
-        set $appflowy_web_backend "http://appflowy_web:80";
+	set $appflowy_web_backend "https://app-flowy-web-two.vercel.app";
+        #set $appflowy_web_backend "http://appflowy_web:80";
         set $appflowy_ai_backend "http://ai:5001";
-        set $minio_backend "http://minio:9001";
+        set $minio_backend "https://buckets.arulnathan.ca";
+	#set $minio_backend "http://minio:9001";
         set $portainer_backend "http://portainer:9000";
         set $pgadmin_backend "http://pgadmin:80";
 
